# page-weaver

./: .env  DESKTOP_BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml  windows-release.yml
.lovable/: plan.md
docs/claude/: CLAUDE_MEMORY.md  CLAUDE_PROMPT.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: SyncStatusIndicator.tsx  UpdateChecker.tsx
src/hooks/: use-mobile.tsx  useAuth.ts  useCloudData.ts  useKeyboardShortcuts.ts  useOnlineStatus.ts  useSupabaseSync.ts  useTheme.ts
src/lib/: adminApi.ts  crypto.ts  dataValidator.ts  fileStorage.ts  migration.ts  pinyin.ts  print.ts  syncManager.ts
src/pages/: Appointments.tsx  Auth.tsx  Cashier.tsx  Dashboard.tsx  Members.tsx  NotFound.tsx  Reports.tsx  Services.tsx  Settings.tsx  Transactions.tsx
src/services/: appointmentService.ts  auditService.ts  cardService.ts  memberService.ts  orderService.ts  serviceService.ts  settingsService.ts  transactionService.ts
src/stores/: useStore.ts
src/test/: store.test.ts
src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20260203105418_8c94ee88-8c9e-43f0-97d7-88efb166304f.sql  20260206064758_5e75af8e-9ceb-4587-9147-1a2177313f12.sql  20260206071716_236e1ff5-3b2a-4176-840c-c04df45ec477.sql  20260208011035_79caf54b-6140-4e80-aca5-ec8f133e42ba.sql  20260209002413_d52ac37a-afef-4633-9491-a28e628fc72a.sql  20260210004539_41239939-069a-45b7-80e6-7727af343d2b.sql  20260210004701_ba4085e0-e419-4ac8-9ae4-94e2b8f7a39b.sql  (+5 more)
(+46 files in other folders)
